update WildFly docx example

--- a/generate-documents-from-word-templates-with-docx4j-on-wildfly14/pom.xml
+++ b/generate-documents-from-word-templates-with-docx4j-on-wildfly14/pom.xml
@@ -41,7 +41,7 @@
     </dependencies>
 
     <build>
-        <finalName>ROOT</finalName>
+        <finalName>word-generation</finalName>
     </build>
 
 </project>
