find solution to create AWS services on startup

--- a/spring-boot-aws-integration-tests/src/test/resources/application.yml
+++ b/spring-boot-aws-integration-tests/src/test/resources/application.yml
@@ -4,5 +4,13 @@ spring:
 
 cloud:
   aws:
+    region:
+      static: eu-central-1
     stack:
       auto: false
+
+sqs:
+  orderEventQueue: order-event-queue
+
+s3:
+  orderEventBucket: order-event-bucket
