--- a/spring-boot-aws-integration-tests/pom.xml
+++ b/spring-boot-aws-integration-tests/pom.xml
@@ -18,6 +18,7 @@
     <java.version>11</java.version>
     <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
     <testcontainers.version>1.13.0</testcontainers.version>
+    <awaitility.version>4.0.2</awaitility.version>
   </properties>
 
   <dependencies>
@@ -34,11 +35,19 @@
       <groupId>org.testcontainers</groupId>
       <artifactId>localstack</artifactId>
       <version>${testcontainers.version}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>junit-jupiter</artifactId>
       <version>${testcontainers.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.awaitility</groupId>
+      <artifactId>awaitility</artifactId>
+      <version>${awaitility.version}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
