--- a/review-microshed-testing/Dockerfile
+++ b/review-microshed-testing/Dockerfile
@@ -1,4 +1,4 @@
-FROM openliberty/open-liberty:full-java11-openj9-ubi
+FROM openliberty/open-liberty:20.0.0.5-kernel-java11-openj9-ubi
 
 COPY --chown=1001:0  src/main/liberty/config/postgres /config/postgres
 COPY --chown=1001:0  src/main/liberty/config/server.xml /config
