add more examples for using Spring Cloud Function with AWS

--- a/serverless-java-aws-examples/spring-cloud-function-aws/serverless.yml
+++ b/serverless-java-aws-examples/spring-cloud-function-aws/serverless.yml
@@ -5,12 +5,42 @@ provider:
   runtime: java11
   region: eu-central-1
   profile: serverless-admin
+  timeout: 10
+  iamRoleStatements:
+    - Effect: 'Allow'
+      Action:
+        - 's3:*'
+      Resource:
+        - 'arn:aws:s3:::${self:custom.orderEventBucket}/*'
+        - !Join ['', ['arn:aws:s3:::', !Ref ServerlessDeploymentBucket, '/*']]
+
+custom:
+  orderEventBucket: order-event-bucket-rieckpil
 
 package:
   artifact: target/spring-cloud-function-aws-1.0.0-shaded.jar
 
 functions:
   uppercase:
+    handler: org.springframework.cloud.function.adapter.aws.FunctionInvoker
+    environment:
+      SPRING_CLOUD_FUNCTION_DEFINITION: uppercase
+
+  randomString:
+    handler: de.rieckpil.blog.EmptyInputHandler
+    environment:
+      FUNCTION_NAME: randomString
+
+  s3EventProcessor:
+    handler: de.rieckpil.blog.S3EventHandler
+    events:
+      - s3:
+          bucket: ${self:custom.orderEventBucket}
+          event: s3:ObjectCreated:*
+    environment:
+      FUNCTION_NAME: processS3Event
+
+  createPerson:
     handler: org.springframework.cloud.function.adapter.aws.SpringBootApiGatewayRequestHandler
     events:
       - http:
@@ -20,3 +50,12 @@ functions:
     environment:
       FUNCTION_NAME: processPerson
 
+  createXmlOrder:
+    handler: org.springframework.cloud.function.adapter.aws.SpringBootStreamHandler
+    events:
+      - http:
+          path: orders
+          method: post
+          cors: true
+    environment:
+      FUNCTION_NAME: processXmlOrder
