--- a/serverless-java-aws-examples/spring-cloud-function-aws/pom.xml
+++ b/serverless-java-aws-examples/spring-cloud-function-aws/pom.xml
@@ -19,9 +19,9 @@
   <properties>
     <java.version>11</java.version>
     <aws-lambda-java-core.version>1.2.1</aws-lambda-java-core.version>
-    <spring-cloud-function.version>3.0.6.RELEASE</spring-cloud-function.version>
+    <spring-cloud-function.version>3.0.7.RELEASE</spring-cloud-function.version>
     <wrapper.version>1.0.17.RELEASE</wrapper.version>
-    <json.version>20190722</json.version>
+<!--    <json.version>20190722</json.version>-->
     <aws-lambda-java-events.version>2.2.7</aws-lambda-java-events.version>
     <aws-java-sdk-s3.version>1.11.792</aws-java-sdk-s3.version>
   </properties>
@@ -53,6 +53,7 @@
       <artifactId>aws-java-sdk-s3</artifactId>
       <version>${aws-java-sdk-s3.version}</version>
     </dependency>
+
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-lambda-java-core</artifactId>
@@ -63,12 +64,6 @@
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-lambda-java-events</artifactId>
       <version>${aws-lambda-java-events.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.json</groupId>
-      <artifactId>json</artifactId>
-      <version>${json.version}</version>
     </dependency>
 
     <dependency>
@@ -105,17 +100,6 @@
           <createDependencyReducedPom>false</createDependencyReducedPom>
           <shadedArtifactAttached>true</shadedArtifactAttached>
           <shadedClassifierName>shaded</shadedClassifierName>
-          <transformers>
-            <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-              <resource>META-INF/spring.handlers</resource>
-            </transformer>
-            <transformer implementation="org.springframework.boot.maven.PropertiesMergingResourceTransformer">
-              <resource>META-INF/spring.factories</resource>
-            </transformer>
-            <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-              <resource>META-INF/spring.schemas</resource>
-            </transformer>
-          </transformers>
         </configuration>
       </plugin>
     </plugins>
