--- a/serverless-java-aws-examples/simple-aws-lambda/pom.xml
+++ b/serverless-java-aws-examples/simple-aws-lambda/pom.xml
@@ -12,6 +12,7 @@
     <maven.compiler.target>11</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <aws-lambda-java-core.version>1.2.1</aws-lambda-java-core.version>
+    <aws-lambda-java-events.version>3.1.0</aws-lambda-java-events.version>
   </properties>
 
   <dependencies>
@@ -19,6 +20,11 @@
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-lambda-java-core</artifactId>
       <version>${aws-lambda-java-core.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-lambda-java-events</artifactId>
+      <version>${aws-lambda-java-events.version}</version>
     </dependency>
   </dependencies>
 
