--- a/spring-boot-uploading-and-downloading-files-with-react/pom.xml
+++ b/spring-boot-uploading-and-downloading-files-with-react/pom.xml
@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.2.2.RELEASE</version>
+    <version>2.3.0.RELEASE</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
@@ -32,6 +32,10 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
 
     <dependency>
@@ -108,7 +112,7 @@
         </executions>
         <configuration>
           <workingDirectory>frontend</workingDirectory>
-          <nodeVersion>v12.9.1</nodeVersion>
+          <nodeVersion>v12.18.0</nodeVersion>
         </configuration>
       </plugin>
     </plugins>
