--- a/spring-security-aws-cognito-thymeleaf/src/main/resources/application.yml
+++ b/spring-security-aws-cognito-thymeleaf/src/main/resources/application.yml
@@ -6,10 +6,10 @@ spring:
           cognito:
             clientId: ${COGNITO_CLIENT_ID}
             clientSecret: ${COGNITO_CLIENT_SECRET}
-            scope: openid
+            scope: openid, email
             redirectUriTemplate: http://localhost:8080/login/oauth2/code/cognito
             clientName: spring-boot-backend
         provider:
           cognito:
-            issuerUri: https://cognito-idp.eu-central-1.amazonaws.com/eu-central-1_fLJkzrAVR
+            issuerUri: https://cognito-idp.eu-central-1.amazonaws.com/eu-central-1_q0EMn8pPG
             usernameAttribute: username
