add Lambda examples based on cron expression

--- a/serverless-java-aws-examples/simple-aws-lambda/serverless.yml
+++ b/serverless-java-aws-examples/simple-aws-lambda/serverless.yml
@@ -40,3 +40,7 @@ functions:
           event: s3:ObjectCreated:*
           rules:
             - suffix: .png
+  simpleScheduledTrigger:
+    handler: de.rieckpil.blog.SimpleScheduledHandler
+    events:
+      - schedule: rate(1 minute)
