add example for RequestStreamHandler

--- a/serverless-java-aws-examples/simple-aws-lambda/serverless.yml
+++ b/serverless-java-aws-examples/simple-aws-lambda/serverless.yml
@@ -44,3 +44,5 @@ functions:
     handler: de.rieckpil.blog.SimpleScheduledHandler
     events:
       - schedule: rate(1 minute)
+  fullControlLambda:
+    handler: de.rieckpil.blog.FullControlLambda
