--- a/serverless-java-aws-examples/simple-aws-lambda/pom.xml
+++ b/serverless-java-aws-examples/simple-aws-lambda/pom.xml
@@ -13,6 +13,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <aws-lambda-java-core.version>1.2.1</aws-lambda-java-core.version>
     <aws-lambda-java-events.version>3.1.0</aws-lambda-java-events.version>
+    <jackson-databind.version>2.9.8</jackson-databind.version>
   </properties>
 
   <dependencies>
@@ -25,6 +26,11 @@
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-lambda-java-events</artifactId>
       <version>${aws-lambda-java-events.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${jackson-databind.version}</version>
     </dependency>
   </dependencies>
 
