--- a/charts-in-pdf-java-ee/Dockerfile
+++ b/charts-in-pdf-java-ee/Dockerfile
@@ -1,3 +1,6 @@
-FROM open-liberty:kernel
-COPY server.xml /config/
-COPY target/charts-in-pdf-java-ee.war /config/dropins/
+FROM openliberty/open-liberty:20.0.0.6-kernel-java11-openj9-ubi
+
+COPY --chown=1001:0  target/charts-in-pdf-java-ee.war /config/dropins/
+COPY --chown=1001:0  server.xml /config/
+
+RUN configure.sh
