--- a/.github/workflows/broken-links.yml
+++ b/.github/workflows/broken-links.yml
@@ -10,4 +10,4 @@ jobs:
         with:
           node-version: 12.x
       - run: npm install -g markdown-link-check
-      - run: markdown-link-check ./README.md
+      - run: find . -name \*.md -exec markdown-link-check -c .broken-link-config.json {} \;
