--- a/spring-boot-selenium-integration-tests/pom.xml
+++ b/spring-boot-selenium-integration-tests/pom.xml
@@ -57,11 +57,13 @@
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-remote-driver</artifactId>
       <version>${selenium.version}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-chrome-driver</artifactId>
       <version>${selenium.version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
