enrich JUnit 5 blog post

--- a/five-unknown-junit-5-features/pom.xml
+++ b/five-unknown-junit-5-features/pom.xml
@@ -33,6 +33,14 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.2</version>
+        <configuration>
+          <properties>
+            <configurationParameters>
+              junit.jupiter.execution.parallel.enabled = true
+              junit.jupiter.execution.parallel.mode.default = concurrent
+            </configurationParameters>
+          </properties>
+        </configuration>
       </plugin>
     </plugins>
   </build>
