--- a/testing-spring-boot-applications-with-mockmvc/pom.xml
+++ b/testing-spring-boot-applications-with-mockmvc/pom.xml
@@ -31,6 +31,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
