--- a/mockito-tips-and-tricks/pom.xml
+++ b/mockito-tips-and-tricks/pom.xml
@@ -14,6 +14,7 @@
     <kotlin.version>1.4.10</kotlin.version>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
+    <mockito.version>3.5.13</mockito.version>
   </properties>
 
   <dependencyManagement>
@@ -40,7 +41,13 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-inline</artifactId>
       <!-- version needs to be >= 3.4.0 -->
-      <version>3.5.13</version>
+      <version>${mockito.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <version>${mockito.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
