adjust example for Selenide intro

--- a/write-concise-web-tests-with-selenide/pom.xml
+++ b/write-concise-web-tests-with-selenide/pom.xml
@@ -68,7 +68,16 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <configuration>
+          <includes>
+            <include>**/*WT.java</include>
+          </includes>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
-
 </project>
