add basic GreenMail send and receive example

--- a/testing-libraries-overview/pom.xml
+++ b/testing-libraries-overview/pom.xml
@@ -53,6 +53,12 @@
 
   <dependencies>
 
+    <dependency>
+      <groupId>com.sun.mail</groupId>
+      <artifactId>jakarta.mail</artifactId>
+      <version>1.6.5</version>
+    </dependency>
+
     <!-- Test Runner -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
