--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,38 +1,24 @@
 name: Build Maven Projects
 on: [push, pull_request]
 jobs:
-  build-jdk8:
-    runs-on: ubuntu-latest
-    name: Build Java 8 projects
+  build:
+    strategy:
+      fail-fast: false
+      matrix:
+        versions: [1.8, 11, 15]
+    runs-on: ubuntu latest 
+    name: Build Java ${{ matrix.versions }} projects
     steps:
       - uses: actions/checkout@v1
       - uses: actions/cache@v1
         with:
           path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-jdk8-${{ hashFiles('**/pom.xml') }}
+          key: ${{ runner.os }}-maven-jdk${{ matrix.versions }}-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
-            ${{ runner.os }}-maven-jdk8-
-      - name: Set up JDK 1.8
+            ${{ runner.os }}-maven-jdk${{ matrix.versions }}-
+      - name: Set up JDK ${{ matrix.versions }}
         uses: actions/setup-java@v1
         with:
-          java-version: 1.8
-      - name: Build JDK 8 projects
-        run: ./buildJdk8Projects.sh
-  build-jdk11:
-    runs-on: ubuntu-latest
-    name: Build Java 11 projects
-    steps:
-      - uses: actions/checkout@v1
-      - uses: actions/cache@v1
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-jdk11-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-jdk11-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Build JDK 11 projects
-        run: ./buildJdk11Projects.sh
-
+          java-version: ${{ matrix.versions }}
+      - name: Build all projects with Maven
+        run: ./buildJdk${{ matrix.versions }}Projects.sh
