--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,7 +6,7 @@ jobs:
       fail-fast: false
       matrix:
         versions: [1.8, 11, 15]
-    runs-on: ubuntu latest 
+    runs-on: ubuntu-latest 
     name: Build Java ${{ matrix.versions }} projects
     steps:
       - uses: actions/checkout@v1
