--- a/spring-boot-test-mail-sending/pom.xml
+++ b/spring-boot-test-mail-sending/pom.xml
@@ -18,6 +18,7 @@
   <properties>
     <java.version>11</java.version>
     <greenmail.version>1.6.1</greenmail.version>
+    <testcontainers.version>1.15.1</testcontainers.version>
   </properties>
 
   <dependencies>
@@ -50,6 +51,12 @@
       <groupId>com.icegreen</groupId>
       <artifactId>greenmail-junit5</artifactId>
       <version>${greenmail.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>${testcontainers.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
