introduce Awaitility for a more robust assertion

--- a/spring-boot-test-mail-sending/pom.xml
+++ b/spring-boot-test-mail-sending/pom.xml
@@ -19,6 +19,7 @@
     <java.version>11</java.version>
     <greenmail.version>1.6.1</greenmail.version>
     <testcontainers.version>1.15.1</testcontainers.version>
+    <awaitility.version>4.0.3</awaitility.version>
   </properties>
 
   <dependencies>
@@ -35,22 +36,22 @@
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
 
-
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>com.icegreen</groupId>
-      <artifactId>greenmail</artifactId>
-      <version>${greenmail.version}</version>
-      <scope>test</scope>
-    </dependency>
+
     <dependency>
       <groupId>com.icegreen</groupId>
       <artifactId>greenmail-junit5</artifactId>
       <version>${greenmail.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.awaitility</groupId>
+      <artifactId>awaitility</artifactId>
+      <version>${awaitility.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
