add next steps for the AWS CDK intro

--- a/aws-cdk-java-introduction/pom.xml
+++ b/aws-cdk-java-introduction/pom.xml
@@ -43,9 +43,16 @@
       <artifactId>core</artifactId>
       <version>${cdk.version}</version>
     </dependency>
+
     <dependency>
       <groupId>software.amazon.awscdk</groupId>
       <artifactId>s3</artifactId>
+      <version>${cdk.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>software.amazon.awscdk</groupId>
+      <artifactId>ecs-patterns</artifactId>
       <version>${cdk.version}</version>
     </dependency>
 
