add further test examples for REST Assured and Spring Boot

--- a/spring-boot-rest-assured/pom.xml
+++ b/spring-boot-rest-assured/pom.xml
@@ -17,6 +17,7 @@
 
   <properties>
     <java.version>11</java.version>
+    <groovy.version>3.0.7</groovy.version>
   </properties>
 
   <dependencies>
