get first REST Assured tests running

--- a/testing-libraries-overview/pom.xml
+++ b/testing-libraries-overview/pom.xml
@@ -32,8 +32,9 @@
     <selenium.version>3.141.59</selenium.version>
     <microshed-testing.version>0.9</microshed-testing.version>
     <awaitility.version>4.0.3</awaitility.version>
-    <rest-assured.version>4.2.0</rest-assured.version>
+    <rest-assured.version>4.3.3</rest-assured.version>
     <greenmail.version>1.6.0</greenmail.version>
+    <groovy.version>3.0.7</groovy.version>
   </properties>
 
   <dependencyManagement>
@@ -211,7 +212,6 @@
     <dependency>
       <groupId>io.rest-assured</groupId>
       <artifactId>rest-assured</artifactId>
-      <version>${rest-assured.version}</version>
       <scope>test</scope>
     </dependency>
 
